src/mediapipe_face.h

typedef enum {
  MP_DELEGATE_CPU = 0,
  MP_DELEGATE_XNNPACK = 1,
  MP_DELEGATE_GPU_V2 = 2,
} MpDelegateType;
typedef struct {
  float scale_x;
  float scale_y;
  float shift_x;
  float shift_y;
} MpRoiTransformOptions;
// ---- Face blendshapes ------------------------------------------------------
// Post-processing module that turns face landmarks into 52 ARKit-style
// blendshape coefficients. Runs as its own context, separate from the face
// mesh context, on the landmarks it is given.

typedef struct MpBlendshapesContext MpBlendshapesContext;
typedef struct {
  const char* tflite_library_path;
  int32_t threads;
  MpDelegateType delegate;
  // When non-zero, fail creation instead of falling back to CPU if the
  // requested delegate is unavailable or cannot be created.
  uint8_t disable_delegate_fallback;
} MpBlendshapesCreateOptions;
typedef struct {
  // 52 blendshape coefficients in [0, 1], ordered to match the MediaPipe face
  // blendshapes model (index 0 is `_neutral`).
  float* scores;
  int32_t scores_count;
} MpBlendshapesResult;