lib/src/mediapipe_face_bindings_generated.dart


  @ffi.Float()
  external double min_detection_confidence;

  @ffi.Float()
  external double min_suppression_threshold;

  @ffi.Int32()
  external int max_results;

  @ffi.UnsignedInt()
  external int delegate;

  /// When non-zero, fail creation instead of falling back to CPU if the
  /// requested delegate is unavailable or cannot be created.
  @ffi.Uint8()
  external int disable_delegate_fallback;
}

final class MpRoiTransformOptions extends ffi.Struct {
  @ffi.Float()
  external double scale_x;

  @ffi.Float()
  external double scale_y;

  @ffi.Float()
  external double shift_x;

  @ffi.Float()
  external double shift_y;
}

final class MpBlendshapesContext extends ffi.Opaque {}

final class MpBlendshapesCreateOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tflite_library_path;

  @ffi.Int32()
  external int threads;

  @ffi.UnsignedInt()
  external int delegate;

  /// When non-zero, fail creation instead of falling back to CPU if the
  /// requested delegate is unavailable or cannot be created.
  @ffi.Uint8()
  external int disable_delegate_fallback;
}

final class MpBlendshapesResult extends ffi.Struct {
  /// 52 blendshape coefficients in [0, 1], ordered to match the MediaPipe face
  /// blendshapes model (index 0 is `_neutral`).
  external ffi.Pointer<ffi.Float> scores;

  @ffi.Int32()
  external int scores_count;
}
